crud fix & some others
