# BACKEND/src/controller/base/base-controller.js
@@ -8,20 +8,18 @@ module.exports = (model) => {
         findAll: (req, res, next) => {
             return service.findAll()
                 .then(list => res.json(list))
-                //.catch !!!
+                .catch( err => next(new createError.BadRequest(err.message)))
         },
         findOne(req, res, next) {
             return service.findOne(req.params.id)
             .then(entity => res.json(entity))
             .catch( err => next(new createError.NotFound(err.message)))
         },
-        updateOne(req, res, next) {
+        updateOne(req, res, next) { 
+            console.log(`controller: ${req.body.kindergarten} ${req.body.group}`);
             return service.updateOne(req.params.id, req.body)
             .then(entity => res.json(entity))
-            .catch(err => {
-                res.statusCode = 501
-                res.json(err) //vmi hiba van itt
-            })
+            .catch(err => next(new createError.InternalServerError(err.message)))
         },
         createOne(req, res, next) {
             console.log(`controller: ${req.body.name}`);
@@ -32,10 +30,7 @@ module.exports = (model) => {
         deleteOne(req, res, next) {
             return service.deleteOne(req.params.id)
             .then(() => res.json({}))
-            .catch(err => {
-                res.statusCode = 404 //???
-                res.json(err)
-            })
+            .catch(err => next(new createError.NotFound(err.message)))
         }
     }
 }
