# BACKEND/src/model/employee.model.js
@@ -9,17 +9,26 @@ const EmployeeSchema = mongoose.Schema({
         type: String,
         required: true,
     },
-    kindergarten: {
+    /* kindergarten: {
         type: String,
         required: true,
+    }, */
+    kindergarten: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Kindergarten',
+        reqired: true
     },
     position: {
         type: String,
         required: true,
     },
-    group: {
+    /* group: {
         type: String,
         required: false,
+    }, */
+    group: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Group'
     },
     skills: {
         type: String,
